tests/ui/associated-consts/wrong-projection-self-ty-invalid-bivariant-arg.stderr
error[E0392]: type parameter `T` is never used
  --> $DIR/wrong-projection-self-ty-invalid-bivariant-arg.rs:1:13
   |
LL | struct Fail<T>;
   |             ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0392`.
